--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class= "hero-text">
                     <h1>Uwais Osman</h1>
                     <p>Software Developer</p>
-                    <div class = "button"><a1 href = "#about-me">About me</a1></div>
+                    <div class = "button"><a href="#about-me">About me</a></div>
                 </div>
                 <div class = "socials">
                     <div><a href="https://www.linkedin.com/in/uwais-osman-72a6b0241" class = "social">
